affectation de marges sur les titres

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <a href="#">Activités</a>
             </div>
         </nav>
-        <p class="titre">Trouvez votre hébergement pour des vacances de rêve</p>
+        <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
         <h5>En plein centre-ville ou en pleine nature</h5>
 
         <!-- Partie recherche-->
         <div class="recherche">
-            <i class="fa-solid fa-location-dot"></i>
+            <i class="fa-solid fa-location-dot fa-2xs"></i>
             <form action="#">
                 <input type="text" id="fname" name="fname" value="Marseille,France">
                 <input id="recherche" type="submit" value="Recherche">
@@ -72,9 +72,9 @@
                         <div class="card-hebergement">
                             <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hébergement">
                             <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
+                                <p class="nom">Auberge La Canebière</p>
                                 <p>Nuit à partir de 25 €</p>
-                                <div id="star">
+                                <div id="star-logement">
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
@@ -88,7 +88,7 @@
                             <div class="container">
                                 <h4><b>Hôtel du port </b></h4>
                                 <p>Nuit à partir de 52 €</p>
-                                <div id="star">
+                                <div id="star-logement">
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
@@ -102,7 +102,7 @@
                             <div class="container">
                                 <h4><b>Hôtel les mouettes </b></h4>
                                 <p>Nuit à partir de 76 €</p>
-                                <div id="star">
+                                <div id="star-logement">
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
@@ -119,7 +119,7 @@
                             <div class="container">
                                 <h4><b>Hôtel de la mer </b></h4>
                                 <p>Nuit à partir de 46 €</p>
-                                <div id="star">
+                                <div id="star-logement">
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
@@ -133,7 +133,7 @@
                             <div class="container">
                                 <h4><b>Auberge le panier </b></h4>
                                 <p>Nuit à partir de 23 €</p>
-                                <div id="star">
+                                <div id="star-logement">
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
@@ -147,7 +147,7 @@
                             <div class="container">
                                 <h4><b>Hôtel chez Amina </b></h4>
                                 <p>Nuit à partir de 96 €</p>
-                                <div id="star">
+                                <div id="star-logement">
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
@@ -168,9 +168,9 @@
                     <div class="card-populaire">
                         <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="populaire">
                         <div class="container">
-                            <h4><b>Hôtel le soleil du matin </b></h4>
+                            <p><b>Hôtel le soleil du matin </b></p>
                             <p>Nuit à partir de 128 €</p>
-                            <div id="star">
+                            <div id="star-populaire">
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
@@ -182,9 +182,9 @@
                     <div class="card-populaire">
                         <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="populaire">
                         <div class="container">
-                            <h4><b>Chambre d'hôtes Au coeur de l'eau </b></h4>
+                            <p><b>Chambre d'hôtes Au coeur de l'eau </b></p>
                             <p>Nuit à partir de 71 €</p>
-                            <div id="star">
+                            <div id="star-populaire">
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
@@ -196,9 +196,9 @@
                     <div class="card-populaire">
                         <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="populaire">
                         <div class="container">
-                            <h4><b>Hôtel Bleu et Blanc </b></h4>
+                            <p><b>Hôtel Bleu et Blanc </b></p>
                             <p>Nuit à partir de 68 €</p>
-                            <div id="star">
+                            <div id="star-populaire">
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
