ajouté icones dans la barre de recherche

--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
             <div class="liens">
                 <p>Filtres</p>
                 <div class="lien1">
+                    <i class="fa-solid fa-sack-dollar"></i>
                     <a href="#"> Economique </a>
                 </div>
                 <div class="lien2">
-                    <i class="fa-duotone fa-people-simple"></i>
+                    <i class="fa-solid fa-person"></i>
                     <a href="#">Familial</a>
                 </div>
                 <div class="lien3">
+                    <i class="fa-solid fa-heart"></i>
                     <a href="#">Romantique</a>
                 </div>
                 <div class="lien4">
