ajout des liens de la barre recherche

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Partie recherche-->
         <div class="recherche">
-            <i class="fa-solid fa-location-dot fa-2xs"></i>
+            <i class="fa-solid fa-location-dot"></i>
             <form action="#">
                 <input type="text" id="fname" name="fname" value="Marseille,France">
                 <input id="recherche" type="submit" value="Recherche">
@@ -44,15 +44,15 @@
                     <i class="fa-solid fa-sack-dollar"></i>
                     <a href="#"> Economique </a>
                 </div>
-                <div class="lien2">
+                <div class="lien1">
                     <i class="fa-solid fa-person"></i>
                     <a href="#">Familial</a>
                 </div>
-                <div class="lien3">
+                <div class="lien1">
                     <i class="fa-solid fa-heart"></i>
                     <a href="#">Romantique</a>
                 </div>
-                <div class="lien4">
+                <div class="lien1">
                     <i class="fa-sharp fa-solid fa-dog"></i>
                     <a href="#">Animaux autorisés</a>
                 </div>
