nettoyé le fichier de style

--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
         </div>
         <!--Partie filtre-->
         <div class="filtre">
-            <div class="liens">
+            <div class="liens-container">
                 <p>Filtres</p>
-                <div class="lien1">
+                <div class="lien">
                     <i class="fa-solid fa-sack-dollar"></i>
                     <a href="#"> Economique </a>
                 </div>
-                <div class="lien1">
+                <div class="lien">
                     <i class="fa-solid fa-person"></i>
                     <a href="#">Familial</a>
                 </div>
-                <div class="lien1">
+                <div class="lien">
                     <i class="fa-solid fa-heart"></i>
                     <a href="#">Romantique</a>
                 </div>
-                <div class="lien1">
+                <div class="lien">
                     <i class="fa-sharp fa-solid fa-dog"></i>
                     <a href="#">Animaux autorisés</a>
                 </div>
