liens sur les cards activitées et logements

--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 
                     <article class="hebergement-jaune">
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hébergement">
-                            <div class="container">
+                            <a href="#">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Canebière">
+                            </a>
+                                <div class="container">
                                 <p class="nom">Auberge La Canebière</p>
                                 <p>Nuit à partir de 25 €</p>
                                 <div id="star-logement">
@@ -87,8 +89,10 @@
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hébergement">
-                            <div class="container">
+                            <a href="#">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                            </a>
+                                <div class="container">
                                 <p class="nom">Hôtel du port</p>
                                 <p>Nuit à partir de 52 €</p>
                                 <div id="star-logement">
@@ -101,8 +105,10 @@
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hébergement">
-                            <div class="container">
+                            <a href="#">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
+                            </a>
+                                <div class="container">
                                 <p class="nom">Hôtel les mouettes</p>
                                 <p>Nuit à partir de 76 €</p>
                                 <div id="star-logement">
@@ -118,8 +124,10 @@
 
                     <article class="hebergement-jaune">
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hébergement">
-                            <div class="container">
+                            <a href="#">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                            </a>
+                                <div class="container">
                                 <p class="nom">Hôtel de la mer</p>
                                 <p>Nuit à partir de 46 €</p>
                                 <div id="star-logement">
@@ -132,8 +140,10 @@
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hébergement">
-                            <div class="container">
+                            <a href="#">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier">
+                            </a>
+                                <div class="container">
                                 <p class="nom">Auberge le panier</p>
                                 <p>Nuit à partir de 23 €</p>
                                 <div id="star-logement">
@@ -146,8 +156,10 @@
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hébergement">
-                            <div class="container">
+                            <a href="#">
+                                <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                            </a>
+                                <div class="container">
                                 <p class="nom">Hôtel chez Amina</p>
                                 <p>Nuit à partir de 96 €</p>
                                 <div id="star-logement">
@@ -169,7 +181,7 @@
                 <p class="titre">Les plus populaires</p>
                 <article class="populaire-jaune">
                     <div class="card-populaire">
-                        <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="populaire">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
                         <div class="container">
                             <p class="nom">Hôtel le soleil du matin</p>
                             <p>Nuit à partir de 128 €</p>
@@ -183,7 +195,7 @@
                         </div>
                     </div>
                     <div class="card-populaire">
-                        <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="populaire">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes Au coeur de l'eau">
                         <div class="container">
                             <p class="nom">Chambre d'hôtes Au coeur de l'eau</p>
                             <p>Nuit à partir de 71 €</p>
@@ -197,7 +209,7 @@
                         </div>
                     </div>
                     <div class="card-populaire">
-                        <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="populaire">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
                         <div class="container">
                             <p class="nom">Hôtel Bleu et Blanc</p>
                             <p>Nuit à partir de 68 €</p>
@@ -219,20 +231,28 @@
         <p class="titre">Activités à Marseille</p>
         <section class="images-activite">
             <div class="card-activite">
-                <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="activité">
-                <p class="nom">Vieux-Port</p>
+                <a href="#">
+                    <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
+                </a>
+                    <p class="nom">Vieux-Port</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="activité">
-                <p class="nom">Fort de Pomègues</p>
+                <a href="#">
+                   <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                </a>
+                    <p class="nom">Fort de Pomègues</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="activité">
-                <p class="nom">Parc national des Calanques</p>
+                <a href="#">
+                    <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
+                </a>
+                    <p class="nom">Parc national des Calanques</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="activité">
-                <p class="nom">Notre-Dame-de-la-Garde</p>
+                <a href="#">
+                    <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                </a>
+                    <p class="nom">Notre-Dame-de-la-Garde</p>
             </div>
         </section>
     </section>
