modifié la ligne du favicon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- mise en place du kit d'icones-->
     <script src="https://kit.fontawesome.com/bd510b2bbe.js" crossorigin="anonymous"></script>
     <!--ajouté un favicon et un titre dans l'onglet de la page HTML'-->
-    <link rel="icon" type="image/png" href="Images/logo/Booki.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="Images/logo/Booki.png"/>
     <title> booki</title>
 </head>
 <body>
