mise en page de la page internet

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="container">
-        <header>
+        <header id="header">
             <!--navigation-->
             <nav>
                 <img src="Images/logo/Booki.png" alt="Logo" />
@@ -85,7 +85,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-solid fa-star fa-grey"></i>
                                     </div>
                                 </div>
                             </div>
