retravaillé la barre de reherche

--- a/index.html
+++ b/index.html
@@ -31,17 +31,18 @@
             <h5>En plein centre-ville ou en pleine nature</h5>
 
             <!-- Partie recherche-->
-            <div class="recherche">
-                <i class="fa-solid fa-location-dot"></i>
+            <div class="rechercher"> 
                 <form action="#">
-                    <input type="text" id="fname" name="fname" value="Marseille,France">
-                    <input id="recherche" type="submit" value="Recherche">
+                    <label><i class="fa-solid fa-location-dot fa-lg"></i></label>
+                    <input type="text" id="fname" name="fname" value="   Marseille,France">
+                    <input id="recherche" type="submit" value="Rechercher">
                 </form>
             </div>
             <!--Partie filtre-->
             <div class="filtre">
+                <p class="nom">Filtres</p>
                 <div class="liens-container">
-                    <p class="nom">Filtres</p>
+
                     <div class="lien">
                         <i class="fa-solid fa-sack-dollar"></i>
                         <a href="#"> Economique </a>
