travail de mise en page de la sheet web

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header id="header">
             <!--navigation-->
             <nav>
-                <img src="Images/logo/Booki.png" alt="Logo" />
+                <img src="Images/logo/Booki.png" width="61" height="19" alt="Logo"/>
                 <div class="menu">
                     <a href="#">Hébergements</a>
                     <a href="#">Activités</a>
@@ -40,8 +40,9 @@
             </div>
             <!--Partie filtre-->
             <div class="filtre">
-                <p class="nom">Filtres</p>
+                
                 <div class="liens-container">
+                    <p class="lien-filtre">Filtres</p>
 
                     <div class="lien">
                         <i class="fa-solid fa-sack-dollar"></i>
@@ -55,7 +56,7 @@
                         <i class="fa-solid fa-heart"></i>
                         <a href="#">Romantique</a>
                     </div>
-                    <div class="lien">
+                    <div class="lien-dog">
                         <i class="fa-sharp fa-solid fa-dog"></i>
                         <a href="#">Animaux autorisés</a>
                     </div>
@@ -102,7 +103,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star fa-grey"></i>
                                     </div>
                                 </div>
                             </div>
@@ -117,8 +118,8 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star fa-grey"></i>
                                     </div>
                                 </div>
                             </div>
@@ -136,8 +137,8 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star fa-grey"></i>
                                     </div>
                                 </div>
                             </div>
@@ -151,9 +152,9 @@
                                     <div id="star-logement">
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
-                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star fa-grey"></i>
                                     </div>
                                 </div>
                             </div>
@@ -169,7 +170,7 @@
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
                                         <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star fa-grey"></i>
                                     </div>
                                 </div>
                             </div>
@@ -192,7 +193,7 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star fa-grey"></i>
                                 </div>
                             </div>
                         </div>
@@ -206,7 +207,7 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star fa-grey"></i>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +221,7 @@
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star fa-grey"></i>
                                 </div>
                             </div>
                         </div>
