travaillé sur le style de la page web

--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
             <!-- Partie recherche-->
             <div class="rechercher"> 
                 <form action="#">
-                    <label><i class="fa-solid fa-location-dot fa-lg"></i></label>
-                    <input type="text" id="fname" name="fname" value="   Marseille,France">
-                    <input id="recherche" type="submit" value="Rechercher">
-                </form>
+                    <fieldset id="loca-icone">
+                        <label><i class="fa-solid fa-location-dot fa-lg"></i></label>
+                        </fieldset>
+                        <input type="text" id="fname" name="fname" value="   Marseille,France">
+                        <label for="recherche"></label>
+                        <input id="recherche" type="submit" value="Rechercher">
+</form>
             </div>
             <!--Partie filtre-->
             <div class="filtre">
@@ -46,7 +49,7 @@
 
                     <div class="lien">
                         <i class="fa-solid fa-sack-dollar"></i>
-                        <a href="#"> Economique </a>
+                        <a href="#">Economique</a>
                     </div>
                     <div class="lien">
                         <i class="fa-solid fa-person"></i>
@@ -63,7 +66,7 @@
                 </div>
             </div>
             <div id="info">
-                <i class="fa-sharp fa-solid fa-circle-info"></i>
+                <i class="fa-solid fa-info fa-blue"></i>
                 <h5>Plus de 500 logements sont disponibles dans cette ville</h5>
             </div>
         </header>
@@ -262,8 +265,7 @@
 
         <footer>
             <div class="propos">
-                <p class="nom">A propos</p>
-                <br />
+                <p class="nom">A propos</p><br />
                 <a href="#">Fonctionnement du site</a>
                 <br />
                 <a href="#">Conditions générales</a>
@@ -271,15 +273,13 @@
                 <a href="#">Données et confidentialité</a>
             </div>
             <div class="hebergement">
-                <p class="nom">Nos hébergements</p>
-                <br />
+                <p class="nom">Nos hébergements</p><br />
                 <a href="#">Charte qualité</a>
                 <br />
                 <a href="#">Proposer votre hôtel</a>
             </div>
             <div class="assistance">
-                <p class="nom">Assistance</p>
-                <br />
+                <p class="nom">Assistance</p><br />
                 <a href="#">Centre d'aide</a>
                 <br />
                 <a href="#">Nous contacter</a>
