travaillé sur le media query tablette

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 
 <html lang="fr">
 <head>
+    <!--meta données non affichées sur la page-->
     <!--encodage de la page HTML (jeu de caractères)-->
     <meta charset="utf-8" />
+    <!--zone d'affichage de la page web'-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--lien vers une feuille de style externe-->
     <link rel="stylesheet" href="CSS/style.css" />
     <!--Indication avec preconnect au navigateur de la connection au serveur goggle-font. Ici la police que l'on a choisie est Raleway'-->
@@ -13,7 +16,7 @@
     <!-- mise en place du kit d'icones-->
     <script src="https://kit.fontawesome.com/bd510b2bbe.js" crossorigin="anonymous"></script>
     <!--ajouté un favicon et un titre dans l'onglet de la page HTML'-->
-    <link rel="icon" type="image/png" href="Images/logo/Booki.png"/>
+    <link rel="icon" type="image/png" href="Images/logo/Booki.png" />
     <title> booki</title>
 </head>
 <body>
