validé la balise meta viewport

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--encodage de la page HTML (jeu de caractères)-->
     <meta charset="utf-8" />
     <!--zone d'affichage de la page web'-->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--lien vers une feuille de style externe-->
     <link rel="stylesheet" href="CSS/style.css" />
     <!--Indication avec preconnect au navigateur de la connection au serveur goggle-font. Ici la police que l'on a choisie est Raleway'-->
